@@ -1,3 +1,7 @@
+Sun Aug 31 20:02:56 2008  Minero Aoki  <aamine@loveruby.net>
+
+	* net/loveruby/cflat/compiler/Compiler.java: better help message.
+
 Sun Aug 31 19:59:35 2008  Minero Aoki  <aamine@loveruby.net>
 
 	* net/loveruby/cflat/ast/MemberNode.java: has always non-constant
